fix: home UI alignments

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,10 @@
   align-items: center;
   justify-content: center;
   color: #56516D;
-  height: 50vh;
+  height: 100vh;
+  width: 100vw;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .form_wrapper {
@@ -16,6 +19,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-bottom: 5%;
 }
 
 footer {
@@ -135,4 +139,143 @@ margin-right: 7px;
 }
 .home-image{
   width: 21rem;
+}
+.circle-l-1 {
+  position: absolute;
+  width: 19px;
+  height: 19px;
+  left: 20%;
+  top: 15%;
+  border-radius: 50%;
+  background: #96CEB4;
+}
+
+.circle-l-2 {
+  position: absolute;
+  width: 44px;
+  height: 44px;
+  left: 10%;
+  top: 30%;
+  border-radius: 50%;
+  background: rgba(47, 58, 143, 0.78);
+}
+
+.circle-l-3 {
+  position: absolute;
+  width: 39px;
+  height: 39px;
+  left: 20%;
+  top: 50%;
+  border-radius: 50%;
+  background: #FFBC80;
+}
+
+.circle-l-4 {
+  position: absolute;
+  width: 71px;
+  height: 71px;
+  left: -5px;
+  top: 60%;
+  border-radius: 50%;
+  background: #96CEB4;
+}
+
+.circle-l-5 {
+  position: absolute;
+  width: 45px;
+  height: 45px;
+  left: 15%;
+  bottom: 5%;
+  border-radius: 50%;
+  background: #FFFDA2;
+}
+
+.circle-r-1 {
+  position: absolute;
+  width: 53px;
+  height: 53px;
+  right: 25%;
+  top: 10%;
+  border-radius: 50%;
+  background: #FFFDA2;
+}
+
+.circle-r-2 {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  right: 5%;
+  top: 25%;
+  border-radius: 50%;
+  background: #FFBC80;
+}
+
+.circle-r-3 {
+  position: absolute;
+  width: 46px;
+  height: 46px;
+  right: 15%;
+  top: 45%;
+  border-radius: 50%;
+  background: #96CEB4;
+}
+
+.circle-r-4 {
+  position: absolute;
+  width: 29px;
+  height: 29px;
+  right: 25%;
+  top: 65%;
+  border-radius: 50%;
+  background: rgba(47, 58, 143, 0.78);
+}
+
+.circle-r-5 {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  right: 10%;
+  top: 85%;
+  border-radius: 50%;
+  background: #FFFDA2;
+}
+
+.prop-image {
+  position: absolute;
+}
+
+.prop1 {
+  top: 5%;
+  left:5%;
+  width: 120px;
+}
+
+.prop2 {
+  top: 40%;
+  left: 5%;
+  width: 120px;
+}
+
+.prop3 {
+  top: 75%;
+  left: 5%;
+  width: 100px;
+}
+
+.prop4 {
+  top: 10%;
+  right: 9%;
+  width: 200px;
+}
+
+.prop5 {
+  top: 60%;
+  right: 10%;
+  width: 150px;
+}
+
+
+.codeimage {
+  bottom: 0;
+  width: 350px;
 }
